# docs/swagger.json
@@ -290,6 +290,35 @@
                 "responses": {}
             }
         },
+        "/api/v1/room/updateRoomStatus": {
+            "post": {
+                "description": "updateRoomStatus",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authentication header",
+                        "name": "super_token",
+                        "in": "header"
+                    },
+                    {
+                        "description": "updateRoomStatus",
+                        "name": "updateRoomStatus",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/room.updateRoomStatusReq"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/v1/user/addToken": {
             "post": {
                 "description": "user add token",
@@ -699,6 +728,21 @@
                 },
                 "send_user": {
                     "type": "string"
+                }
+            }
+        },
+        "room.updateRoomStatusReq": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "format": "string",
+                    "example": "房间名称"
+                },
+                "status": {
+                    "type": "integer",
+                    "format": "int",
+                    "example": 1
                 }
             }
         },
